screen: Avoid accessing destroyed panel

When we cancel the Brightness calls because the panel is getting
destroyed, we shouldn't try to access panel widgets.

https://bugzilla.gnome.org/show_bug.cgi?id=677963